--- a/style.css
+++ b/style.css
@@ -695,6 +695,7 @@ a {
   -webkit-filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.4));
           filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.4));
   border: 1px solid #fff;
+  border-radius: 0px;
   color: #ffffff;
   text-transform: uppercase;
   font-size: 3.4rem;
