--- a/style.css
+++ b/style.css
@@ -586,6 +586,8 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  min-width: 330px;
+  min-height: 309px;
 }
 
 @media (max-width: 576px) {
