--- a/style.css
+++ b/style.css
@@ -384,13 +384,19 @@ a {
   content: '';
   position: absolute;
   top: 2;
-  right: -2px;
+  right: -45px;
   display: block;
   width: 2px;
   height: 465px;
   background: black;
   background: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(71%, black), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(180deg, black 0%, black 71%, rgba(255, 255, 255, 0) 100%);
+}
+
+@media (max-width: 576px) {
+  .gallery .empty-block-right::after {
+    right: -2px;
+  }
 }
 
 .gallery .empty-block-left {
@@ -412,13 +418,19 @@ a {
   content: '';
   position: absolute;
   top: 0;
-  left: 3px;
+  left: -50px;
   display: block;
   width: 2px;
   height: 465px;
   background: black;
   background: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(71%, black), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(180deg, black 0%, black 71%, rgba(255, 255, 255, 0) 100%);
+}
+
+@media (max-width: 576px) {
+  .gallery .empty-block-left::before {
+    left: 3px;
+  }
 }
 
 .gallery::before {
