--- a/style.css
+++ b/style.css
@@ -30,11 +30,9 @@ a {
 .section_head {
   position: absolute;
   top: -22px;
-  left: 50%;
   text-align: center;
-  margin-left: -86px;
-  background-color: #fff;
   z-index: 2;
+  width: 100%;
 }
 
 @media (max-width: 576px) {
@@ -52,6 +50,9 @@ a {
   font-weight: bold;
   color: #373737;
   letter-spacing: 3px;
+  background-color: white;
+  display: inline-block;
+  padding: 0 5px;
 }
 
 @media (max-width: 576px) {
