--- a/style.css
+++ b/style.css
@@ -37,11 +37,8 @@ a {
 
 @media (max-width: 576px) {
   .section_head {
-    width: 120px;
-    margin-left: -60px;
     height: 28px;
-    margin-top: -14px;
-    top: 0%;
+    top: -8px;
   }
 }
 
