--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -87,6 +87,15 @@
 {
     left: -25px;
 }
+@media (max-width: 576px) {
+    .slick-prev {
+        left: -5px;
+    }
+    [dir='rtl'] .slick-prev {
+        right: -5px;
+        left: auto;
+    }
+}
 [dir='rtl'] .slick-prev
 {
     right: -25px;
@@ -113,11 +122,23 @@
 {
     right: -25px;
 }
+@media (max-width: 576px) {
+    .slick-next {
+        right: 5px;
+    }
+}
 [dir='rtl'] .slick-next
 {
     right: auto;
     left: -25px;
 }
+
+@media (max-width: 576px) {
+    [dir='rtl'] .slick-next {
+        right: 5px;
+    }
+}
+
 .slick-next:before
 {
     content: '';
