--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -96,6 +96,11 @@
         left: auto;
     }
 }
+@media (max-width: 768px) {
+    .slick-prev {
+        left: 17px;
+    }
+}
 [dir='rtl'] .slick-prev
 {
     right: -25px;
@@ -125,6 +130,11 @@
 @media (max-width: 576px) {
     .slick-next {
         right: 5px;
+    }
+}
+@media (max-width: 768px) {
+    .slick-next {
+        right: 2px;
     }
 }
 [dir='rtl'] .slick-next
