--- a/style.css
+++ b/style.css
@@ -1099,6 +1099,12 @@ footer .social li:last-child {
     width: 100%;
   }
 }
+@media (max-width: 768px) {
+  .special-wrap {
+    left: -31px;
+    width: 104%;
+  }
+}
 
 .rotate {
   -webkit-transform: rotateX(180deg);
