--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ a {
 
 .main-screen {
   height: 735px;
-  width: 1278px;
+  width: 100vw;
   margin: 0 auto;
   background: #fff url("./img/main-bg.png") center 172% no-repeat;
   background-size: cover;
@@ -165,32 +165,32 @@ a {
 
 @media (max-width: 576px) {
   .main-screen {
-    width: 100vw;
+    /* width: 100vw; */
     height: 275px;
   }
 }
 @media (max-width: 768px) {
   .main-screen {
     height: 583px;
-    width: 768px;
+    /* width: 768px; */
   }
 }
 @media (max-width: 992px) {
   .main-screen {
     height: 672px;
-    width: 992px;
+    /* width: 992px; */
   }
 }
 @media (max-width: 1024px) {
   .main-screen {
     height: 722px;
-    width: 1024px;
+    /* width: 1024px; */
   }
 }
 @media (max-width: 1440px) {
   .main-screen {
     height: 782px;
-    width: 1440px;
+    /* width: 1440px; */
   }
 }
 
