--- a/style.css
+++ b/style.css
@@ -411,6 +411,11 @@ a {
   width: 5px;
   background-color: black;
 }
+@media (max-width: 992px) {
+  .gallery .empty-block-right {
+    right: 44px;
+  }
+}
 @media (max-width: 768px) {
   .gallery .empty-block-right {
     right: -8px;
@@ -450,7 +455,12 @@ a {
   width: 4px;
   background-color: white;
 }
-
+@media (max-width: 992px) {
+  .gallery .empty-block-left {
+    left: 49px;
+    background-color: #000000;
+  }
+}
 @media (max-width: 576px) {
   .gallery .empty-block-left {
     left: -2px;
