--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -87,6 +87,11 @@
 {
     left: -25px;
 }
+@media (max-width: 992px) {
+    .slick-prev {
+        left: 14px;
+    }
+}
 @media (max-width: 768px) {
     .slick-prev {
         left: 17px;
@@ -128,6 +133,11 @@
 .slick-next
 {
     right: -25px;
+}
+@media (max-width: 992px) {
+    .slick-next {
+        right: -4px;
+    }
 }
 @media (max-width: 768px) {
     .slick-next {
