--- a/style.css
+++ b/style.css
@@ -461,6 +461,11 @@ a {
     background-color: #000000;
   }
 }
+@media (max-width: 768px) {
+  .gallery .empty-block-left {
+    left: 0px;
+  }
+}
 @media (max-width: 576px) {
   .gallery .empty-block-left {
     left: -2px;
@@ -763,6 +768,12 @@ a {
   background: linear-gradient(90deg, black 0%, black 78%, rgba(255, 255, 255, 0) 100%);
 }
 
+@media (max-width: 768px) {
+  .skills::after {
+    right: 16px;
+    width: 38%;
+  }
+}
 @media (max-width: 576px) {
   .skills::after {
     right: 22px;
@@ -784,7 +795,12 @@ a {
   background: -webkit-gradient(linear, right top, left top, from(black), color-stop(78%, black), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(270deg, black 0%, black 78%, rgba(255, 255, 255, 0) 100%);
 }
-
+@media (max-width: 768px) {
+  .skills::before {
+    right: 27px;
+    width: 60%;
+  }
+}
 @media (max-width: 576px) {
   .skills::before {
     left: 22px;
