--- a/style.css
+++ b/style.css
@@ -360,6 +360,11 @@ a {
     margin-top: 110px;
   }
 }
+@media (max-width: 576px) {
+  .main-screen .main-text img {
+    margin-top: 0px;
+  }
+}
 
 .main-screen .main-text h1 {
   font-size: 9rem;
