--- a/style.css
+++ b/style.css
@@ -134,10 +134,13 @@ a {
 }
 
 .nav a {
-  color: #000000;
+  color: #5F5F5F;
   text-transform: uppercase;
   font-size: 2.4rem;
   text-decoration: none;
+}
+.nav a:hover {
+  color: #212121;
 }
 
 @media (max-width: 576px) {
@@ -615,6 +618,10 @@ a {
   margin-top: 300px;
 }
 
+.gallery a:hover, .gallery .backToGallery:hover {
+  background-color: #212121;
+}
+
 .gallery .gallery-description {
   position: relative;
   color: #5f5f5f;
@@ -1010,6 +1017,25 @@ footer .social li {
 
 footer .social li:last-child {
   margin-right: 0;
+}
+
+.footer-social {
+  width: 48px;
+  height: 48px;
+  background-color: #DADADA;
+  border-radius: 50%;
+}
+.footer-inst {
+  background: url('./img/ig.svg');
+}
+.footer-tg {
+  background: url('./img/tg.svg');
+}
+.footer-vk {
+  background: url('./img/vk.svg');
+}
+.footer-mail {
+  background: url('./img/mail.svg');
 }
 
 .modal {
