--- a/style.css
+++ b/style.css
@@ -1045,7 +1045,7 @@ footer .social li:last-child {
   background: url('./img/mail.svg') center no-repeat;
 }
 .footer-inst:hover {
-  background: url('./img/ig-black.svg') center no-repeat;
+  background: url('./img/ig-black.png') center no-repeat;
 }
 .footer-tg:hover {
   background: url('./img/tg-black.svg') center no-repeat;
