--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -119,7 +119,10 @@
     display: block;
     width: 14px;
     height: 21px;
-    background: #fff url('./../img/next.svg');
+    background-color: #fff;
+    background-image: url('./../img/arrows-sprites.svg');
+    background-size: auto;
+    background-position: 0px 0px;
 }
 [dir='rtl'] .slick-prev:before
 {
