--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -183,7 +183,22 @@
     display: block;
     width: 14px;
     height: 21px;
-    background: #fff url('./../img/prev.svg');
+    background-color: #fff;
+    background-image: url('./../img/arrows-sprites.svg');
+    background-size: auto;
+    background-position: 0px -28px;
+}
+.slick-next:hover:before
+{
+    width: 14px;
+    height: 21px;
+    background-position: 0px -28px;
+}
+.slick-next:active:before
+{
+    width: 14px;
+    height: 21px;
+    background-position: 0px -28px;
 }
 [dir='rtl'] .slick-next:before
 {
